<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_meals"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.meals.MealsFragment"
        android:label="@string/title_meals"
        tools:layout="@layout/fragment_meals" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navigation_my_food"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.me.FoodFragment"
        android:label="Add Food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_daily_food"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.meals.DailyMealsFragment"
        android:label="@string/daily_meals"
        tools:layout="@layout/fragment_daily_meals" />

    <fragment
        android:id="@+id/navigation_add_food"
        android:name="com.petrovic.m.dimitrije.activitytracker.ui.me.FoodFragment"
        android:label="@string/add_foods"
        tools:layout="@layout/fragment_food" />
</navigation>